# setr_proj3

./: CMakeLists.txt  README.md  prj.conf
dg/: Doxyfile
dg/html/: MyEvents_8c.html  MyEvents_8c__incl.dot  MyEvents_8h.html  MyEvents_8h__dep__incl.dot  MyEvents_8h__incl.dot  MyEvents_8h_source.html  MyMovies_8c.html  MyMovies_8c__incl.dot  MyMovies_8h.html  MyMovies_8h__dep__incl.dot  MyMovies_8h_source.html  annotated.html  bug.html  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6c27f0253cef227ac8ec1cdb3aee91c0.html  dir_eed5946de43a24f9af80bc9addcb8400.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  menudata.js  pages.html  structbotao.html  structfilme.html
dg/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+31 more)
dg/latex/: MyEvents_8c.tex  MyEvents_8c.tex.tmp  MyEvents_8c__incl.dot  MyEvents_8h.tex  MyEvents_8h__dep__incl.dot  MyEvents_8h__incl.dot  MyMovies_8c.tex  MyMovies_8c__incl.dot  MyMovies_8h.tex  MyMovies_8h__dep__incl.dot  annotated.tex  bug.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_6c27f0253cef227ac8ec1cdb3aee91c0.tex  dir_eed5946de43a24f9af80bc9addcb8400.tex  files.tex  main_8c.tex  main_8c__incl.dot  refman.tex  structbotao.tex  structfilme.tex
src/: main.c
src/MyEvents/: MyEvents.c  MyEvents.h
src/MyMovies/: MyMovies.c  MyMovies.h
